// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeToggle > renders correctly in dark mode 1`] = `
<div>
  <button
    aria-label="Switch to light mode"
    class="p-2 rounded-full transition-colors duration-300 bg-gray-800 hover:bg-gray-700 text-white"
  >
    <svg
      class="w-6 h-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`ThemeToggle > renders correctly in light mode 1`] = `
<div>
  <button
    aria-label="Switch to dark mode"
    class="p-2 rounded-full transition-colors duration-300 bg-gray-200 hover:bg-gray-300 text-gray-800"
  >
    <svg
      class="w-6 h-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;
